--- a/chuse/privacy.html
+++ b/chuse/privacy.html
@@ -84,6 +84,9 @@
 	<body>
 		<div>
 			<h1 class="text-center">初色APP隐私政策</h1>
+
+			<p>更新日期：2024-09-08</p>
+
 			<section>
 				<p>
 					初色APP是一款致力于为民众提供丰富且便捷的色值查询、色彩搭配等服务的平台，我们尊重并保护您的隐私。为了遵守国家法律法规及监管规定，也为了向您提供服务及提升服务质量，我们需要收集、存储、使用及对外提供您的信息。
@@ -203,6 +206,30 @@
 				</dl>
 			</section>
 			<section>
+				<h2>第三方SDK</h2>
+				<p>
+					<b>
+						为了保障初色相关产品/服务的实现与应用安全稳定的运行，我们会接入由第三方提供的软件开发包（SDK）实现相关目的（如实现手机设备安全、接收信息推送、登录第三方平台账号、通过第三方平台分享信息以及支付安全等）。我们会对合作方获取信息的软件工具开发包（SDK）尽可能地进行严格的安全评估，以保护你的个人信息安全。所接入的部分第三方 SDK 可能会调用你的设备权限、获取你的相关信息。为了帮助你了解，我们将这些第三方SDK的名称、用途和目的、提供方、收集个人信息类型、可能收集的个人信息字段以及调用的权限、第三方隐私政策链接列出如下：
+					</b>
+				</p>
+				<h4>友盟+ SDK</h4>
+				<p>用途和目的：用户使用效果统计分析、应用性能监控、排查应用性能崩溃原因</p>
+				<p>提供方：友盟同欣（北京）科技有限公司</p>
+				<p>接入方式：嵌入第三方SDK，SDK收集传输个人信息</p>
+				<p>收集个人信息类型：个人常用设备信息、个人位置信息</p>
+				<p>个人信息字段：在前台与后台状态下会收集您的设备信息（设备序列号/IMEI/MAC/Android ID/IDFA/IDFV/OpenUDID/GUID/IP地址/SIM 卡 IMSI 信息等）以提供统计分析服务，并通过地理位置校准报表数据准确性，提供基础反作弊能力。应用列表信息、OAID、宿主App进程信息</p>
+				<p>调用的权限：访问网络、访问网络信息、访问Wi-Fi状态、读取外部存储卡、写入外部存储卡</p>
+				<p>第三方隐私政策链接：<a href="https://www.umeng.com/policy">https://www.umeng.com/policy</a></p>
+				<h4>腾讯 bugly SDK</h4>
+				<p>用途和目的：收集 App 的崩溃信息</p>
+				<p>提供方：深圳市腾讯计算机系统有限公司</p>
+				<p>接入方式：嵌入第三方SDK，SDK收集传输个人信息</p>
+				<p>收集个人信息类型：个人常用设备信息</p>
+				<p>个人信息字段：Android：手机型号、 手机品牌、 Android系统版本、 Android系统api等级、 厂商系统版本、 cpu架构类型、 设备是否root、 磁盘空间占用大小、 sdcard空间占用大小、 内存空间占用大小、 网络类型、 应用当前正在运行的进程名和PID； iOS：设备型号、操作系统版本、操作系统内部版本号、wifi状态、cpu属性、内存剩余空间、磁盘空间/磁盘剩余空间、运行时手机状态(进程所占内存、虚拟内存等)、idfv、是否越狱、地区编码； 日志信息（包括：自定义日志、Logcat 日志以及 APP 崩溃堆栈信息）、<span style="background-color: #ffffff;">读取存储信息</span></p>
+				<p>调用的权限：访问网络、访问网络信息<span style="background-color: rgba(255, 246, 122, 0.8);">（接入网络的方式、类型、状态、网络质量数据、运营商信息）</span>、访问Wi-Fi状态、</p>
+				<p>第三方隐私政策链接： <a href="https://privacy.qq.com/document/preview/fc748b3d96224fdb825ea79e132c1a56">https://privacy.qq.com/document/preview/fc748b3d96224fdb825ea79e132c1a56</a></p>
+			</section>
+			<section>
 				<h2>信息的转让</h2>
 				<p>我们不会将您的个人信息转让给任何公司、组织和个人，但以下情况除外：</p>
 				<p><b>（1）事先获得您的明确同意；</b></p>
@@ -234,8 +261,7 @@
 					您访问的第三方网站经营者、您使用的第三方服务提供者和通过我们获取您的个人信息的第三方可能有自己的隐私权保护规则以及获取您个人信息的方法和措施，这些第三方的隐私权保护规则、获取个人信息的方法和措施将不会受到我们的控制。虽然我们将与可能接触到您的个人信息的我们的合作方等第三方签署保密协议并尽合理的努力督促其履行保密义务，但我们无法保证第三方一定会按照我们的要求采取保密措施，我们亦不对第三方的行为及后果承担任何责任。
 				</p>
 				<p>未成年人的个人信息收集和处理</p>
-				<!--    <p>我们非常重视对未成年人个人信息的保护。若您是14周岁以下的未成年人，在使用初色APP服务前，应确保事先取得监护人的同意。如您在初色APP上申请注册账号，我们将默认为您已取得前述同意，将根据国家相关法律法规及本隐私政策的规定保护未成年人的个人信息。</p>-->
-
+				<p>我们非常重视对未成年人个人信息的保护。若您是14周岁以下的未成年人，在使用初色APP服务前，应确保事先取得监护人的同意。如您在初色APP上申请注册账号，我们将默认为您已取得前述同意，将根据国家相关法律法规及本隐私政策的规定保护未成年人的个人信息。</p>
 				<p>我们非常重视对未成年人信息的保护。如果您是未满18周岁的未成年人，您或您的监护人需要仔细阅读本政策，并同意依照本政策使用我们的服务。如果您是未满14周岁的未成年人（以下称“儿童”），您的监护人需要仔细阅读本政策并同意您依照本政策使用。</p>
 				<p>如果您/您的监护人不同意本政策的任何内容，您应该立即停止使用。</p>
 				<p>当且仅当我们通过您提交的信息或者您的声明或陈述，判断您为儿童用户时，我们通过您账号收集的个人信息才被视为儿童个人信息。</p>
